<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistroContagios">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="399dp"
        android:layout_height="606dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_registro"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/menu_registro"
                android:textColor="#04400A"
                android:textColorHint="#582F9F"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nombres"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/et_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Apellidos"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txt_fnacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha de nacimiento:"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fnacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/txt_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="62dp">

                <RadioButton
                    android:id="@+id/rbt_sexo_fem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo_Femenino"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbt_sexo_mascu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo_Masculino"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_discapacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discapacidad"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <RadioButton
                    android:id="@+id/rbt_condicion_si"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_si"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbt_condicion_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_no"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_condiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condiciones"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="368dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbt_discapacidad_si"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_si"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbt_discapacidad_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_no"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f_inicio_sintomas"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dt_inicioSintomas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/txt_pcr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prueba_PCR"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="74dp">

                <RadioButton
                    android:id="@+id/rbt_pcr_si"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_si"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbt_pcr_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resp_no"
                    android:textSize="18sp" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <Button
                android:id="@+id/bt_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_registro" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>